# siphon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  HDF5_SCHEMA.md  README.md  attributes.toml  build.bat  build_debug.bat  clean.bat  compile_flags.txt  conanfile.txt  rebuild.bat  siphon_service.proto
PoC/: CMakeLists.txt  capture_window.cpp  interception.cpp  list_windows.cpp  process_finder.cpp  siphon.cpp
configs/: elden_ring.toml
include/: dll_injector.h  frame_broadcaster.h  h5_recording_writer.h  input_event_logger.h  jpeg_encoder.h  process_attribute.h  process_capture.h  process_input.h  process_memory.h  process_recorder.h  server.h  shared_memory.h  utils.h  video_encoder.h
src/: client.cpp  frame_broadcaster.cpp  h5_recording_writer.cpp  input_event_logger.cpp  jpeg_encoder.cpp  main.cpp  process_attribute.cpp  process_capture.cpp  process_input.cpp  process_memory.cpp  process_recorder.cpp  server.cpp  utils.cpp  video_encoder.cpp
src/dll/: dllmain.cpp
